LAB9: ObservabilityService, HTTP/service timings, controller aspect
- rental.additional.observability + RestTemplateMainCrudClient metrics

- AdditionalRentalService availability/stats compute timings; .gitignore .cursor/*.tar

Made-with: Cursor